--- a/404.html
+++ b/404.html
@@ -3,5 +3,7 @@
 <head></head>
 
 <body>
-  This is 404.html
+  <h1>This is 404.html</h1>
+  <p>You are here because you tried to go to somewhere that doesn't exist.</p>
+  <p><a href="/">Return home</a></p>
 </body>
