--- a/about.html
+++ b/about.html
@@ -3,5 +3,7 @@
 <head></head>
 
 <body>
-  This is about.html
+  <h1>about.html</h1>
+  <p>The purpose of this is to learn the http and fs modules in NodeJS</p>
+  <p><a href="/">Return home</a></p>
 </body>
