--- a/contact-me.html
+++ b/contact-me.html
@@ -3,5 +3,7 @@
 <head></head>
 
 <body>
-  This is contact-me.html
+  <h1>contact-me.html</h1>
+  <p>You can visit my <a href="https://github.com/simalicrum">Github</a>.</p>
+  <p><a href="/">Return home</a></p>
 </body>
