--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head></head>
 
 <body>
-  Hello, world. This is index.html. Here are some places to go:
-  <a href="/about">About</a>
-  <a href="/contact-me">Contact me</a>
+  <h1>Hello, world.</h1>
+  <p>This is index.html. Here are some places to go:</p>
+  <ul>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact-me">Contact me</a></li>
+  </ul>
 </body>
